<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.LoginFragment"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:elevation="@dimen/cardview_default_elevation"
                android:adjustViewBounds="true"
                android:src="@drawable/pic1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

        />


        <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="50dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColorHint="@color/black"
                android:hint="@string/login_email"
                app:layout_constraintTop_toBottomOf="@id/welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"


            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="Username or Email"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:autofillHints="Password"

            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#3b3740"
                android:textSize="16sp"
                android:onClick="onClick"
                android:clickable="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp" android:focusable="true"/>

        <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wlcm_buttons"
                android:text="@string/Log_in"
                android:textColor="@color/black"
                android:backgroundTint="@color/orange"
                android:elevation="@dimen/cardview_default_elevation"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="50dp"
        />
        <TextView
                android:id="@+id/newtofrex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="100dp"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_click"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#3b3740"
                app:layout_constraintStart_toEndOf="@id/newtofrex"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                android:layout_marginTop="30dp" android:focusable="true"/>


        <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="370dp"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>