<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:backgroundTint="@color/white"
        android:background="@color/white"
        tools:context=".view.WlcmFragment">

<ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="fitXY"
            android:src="@drawable/intro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/tvEnjoy"
            android:layout_width="match_parent"
              android:layout_height="70dp"
              android:text="@string/lets_enjoy_this_beautiful_world"
              android:textColor="@color/black"
              android:gravity="center"
              android:textStyle="bold"
              android:layout_marginStart="50dp"
              android:layout_marginEnd="50dp"
              android:textSize="30sp"
              app:layout_constraintTop_toBottomOf="@id/image"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/tvExplore"
            android:layout_width="match_parent"
              android:layout_height="50dp"
              android:textSize="16dp"
              android:gravity="center"
              android:textColor="@color/black"
              android:layout_marginStart="30dp"
              android:layout_marginEnd="30dp"
              android:text="Explore new places in the World and get new experiences"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tvEnjoy"
              app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/registerNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_welcome"
            android:backgroundTint="@color/yellow"
            android:background="@drawable/wlcm_buttons"
            android:elevation="@dimen/cardview_default_elevation"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvExplore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.132" />

    <Button
            android:id="@+id/proceedLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_welcome"
            android:background="@drawable/wlcm_buttons"
            android:elevation="@dimen/cardview_default_elevation"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/registerNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>