<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.Forgot_Password">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logo"

            >
    </androidx.appcompat.widget.Toolbar>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:src="@drawable/palm_tree"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            />

    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recover Password"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/happens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/don_t_worry_happens_to_the_best_of_us"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:boxStrokeColor="@color/black"
            android:hint="@string/enter_your_email_address"
            android:textColorHint="@color/black"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/happens"
            >


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailToRecoverPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:id="@+id/usePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_phonenumber_instead"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/passwordRecovery"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:focusable="true" />

    <Button
            android:id="@+id/sendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/send"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/custom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usePhoneNumber" />

    <TextView
            android:id="@+id/userEmailInstead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WELCOME"
            android:textColor="#6349a3"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/sendCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />


</androidx.constraintlayout.widget.ConstraintLayout>